--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,5 +1,6 @@
 {
   "diagnostic.autoRefresh": true,
   "coc.preferences.formatOnSave": true,
-  "tsserver.experimental.enableProjectDiagnostics": true
+  "tsserver.experimental.enableProjectDiagnostics": true,
+  "rust-analyzer.checkOnSave.command": "clippy"
 }
