--- a/coc-settings.json
+++ b/coc-settings.json
@@ -2,5 +2,10 @@
   "diagnostic.autoRefresh": true,
   "coc.preferences.formatOnSave": true,
   "tsserver.experimental.enableProjectDiagnostics": true,
-  "rust-analyzer.checkOnSave.command": "clippy"
+  "rust-analyzer.checkOnSave.command": "clippy",
+  "cSpell.userWords": [
+    "jsqr",
+    "qrcode",
+    "vitest"
+  ]
 }
